feat(01-01): create provision.sh and launch EC2 instance
- Provision script: creates SSH key pair, security group with port 80 (public)
  and port 22 (admin IP only), launches t3.small AL2023 instance with 30 GB gp3
  volume and user-data.sh; waits for running state; writes instance-info.env
- EC2 instance i-0788240f8e1ae5807 running in us-east-1
- Auto-fix [Rule 3 - Blocker]: created missing default VPC before provisioning
- Auto-fix [Rule 2 - Security]: added instance-info.env to .gitignore to protect
  admin IP and instance metadata from accidental commit

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ compose/.env
 *.pem
 *.key
 
+# AWS provisioning artifacts (contain instance IDs, admin IP, key paths)
+scripts/aws/instance-info.env
+
 # Backups (local copies)
 backups/
 
