feat(02-01): replace Nginx config with HTTP-only single-host proxy
- Replace multi-domain TLS element.conf with single HTTP :80 server block
- server_name _ catch-all matches any EC2 public hostname
- proxy_pass http://synapse:8008 with no trailing slash (Matrix requirement)
- WebSocket headers preserved on Synapse location
- .well-known served from static files with CORS header
- Remove tls-params.conf include from nginx.conf (HTTP-only operation)

--- a/proxy/conf.d/element.conf
+++ b/proxy/conf.d/element.conf
@@ -1,73 +1,21 @@
 # ──────────────────────────────────────────────
-# HTTP -> HTTPS redirect + ACME challenge
+# HTTP-only reverse proxy — POC (no TLS)
 # ──────────────────────────────────────────────
 server {
     listen 80;
     listen [::]:80;
-    server_name chat.example.com matrix.example.com example.com;
+    server_name _;
 
-    # Let's Encrypt challenge
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-# ──────────────────────────────────────────────
-# Element Web — chat.example.com
-# ──────────────────────────────────────────────
-server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name chat.example.com;
-
-    ssl_certificate     /etc/letsencrypt/live/chat.example.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/chat.example.com/privkey.pem;
-
-    include /etc/nginx/snippets/security-headers.conf;
-
-    # Override CSP for Element
-    add_header Content-Security-Policy "frame-ancestors 'self';" always;
-
-    location / {
-        proxy_pass http://element:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
-
-# ──────────────────────────────────────────────
-# Synapse — matrix.example.com (client API)
-# ──────────────────────────────────────────────
-server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name matrix.example.com;
-
-    ssl_certificate     /etc/letsencrypt/live/matrix.example.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/matrix.example.com/privkey.pem;
-
-    include /etc/nginx/snippets/security-headers.conf;
-
-    # Synapse client + federation API
+    # Matrix API — route to Synapse (no trailing slash on proxy_pass!)
     location ~ ^(/_matrix|/_synapse/client) {
         proxy_pass http://synapse:8008;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-
-        # WebSocket support (for sync)
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-
-        # Large uploads
         client_max_body_size 50m;
     }
 
@@ -76,56 +24,19 @@ server {
         proxy_pass http://synapse:8008/health;
     }
 
-    # Block everything else
-    location / {
-        return 404;
-    }
-}
-
-# ──────────────────────────────────────────────
-# Synapse federation port (8448)
-# Only needed if federation is enabled later.
-# ──────────────────────────────────────────────
-server {
-    listen 8448 ssl http2;
-    listen [::]:8448 ssl http2;
-    server_name matrix.example.com;
-
-    ssl_certificate     /etc/letsencrypt/live/matrix.example.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/matrix.example.com/privkey.pem;
-
-    include /etc/nginx/snippets/security-headers.conf;
-
-    location / {
-        proxy_pass http://synapse:8008;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
-
-# ──────────────────────────────────────────────
-# .well-known on main domain
-# ──────────────────────────────────────────────
-server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
-    server_name example.com;
-
-    ssl_certificate     /etc/letsencrypt/live/example.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
-
-    include /etc/nginx/snippets/security-headers.conf;
-
+    # .well-known for Matrix discovery
     location /.well-known/matrix/ {
         alias /var/www/well-known/matrix/;
         default_type application/json;
         add_header Access-Control-Allow-Origin "*" always;
-        add_header Cache-Control "public, max-age=3600";
     }
 
+    # Element Web — catch-all
     location / {
-        return 301 https://chat.example.com;
+        proxy_pass http://element:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
