--- a/synapse/homeserver.yaml
+++ b/synapse/homeserver.yaml
@@ -4,10 +4,10 @@
 # Replace __PLACEHOLDER__ values with real values from your .env
 # or use the bootstrap script which performs substitution automatically.
 
-server_name: "example.com"
-public_baseurl: "https://matrix.example.com/"
+server_name: "__EC2_HOSTNAME__"
+public_baseurl: "http://__EC2_HOSTNAME__/"
 pid_file: /data/homeserver.pid
-web_client_location: "https://chat.example.com/"
+web_client_location: "http://__EC2_HOSTNAME__/"
 
 listeners:
   - port: 8008
@@ -48,7 +48,7 @@ url_preview_enabled: false
 # ──────────────────────────────────────────────
 # Registration
 # ──────────────────────────────────────────────
-enable_registration: false
+enable_registration: true
 registration_requires_token: true
 registration_shared_secret: "__REGISTRATION_SHARED_SECRET__"
 
@@ -106,16 +106,16 @@ encryption_enabled_by_default_for_room_type: "all"
 # ──────────────────────────────────────────────
 # SMTP (email notifications + password reset)
 # ──────────────────────────────────────────────
-email:
-  smtp_host: "__SMTP_HOST__"
-  smtp_port: 587
-  smtp_user: "__SMTP_USER__"
-  smtp_pass: "__SMTP_PASSWORD__"
-  require_transport_security: true
-  notif_from: "%(app)s <noreply@example.com>"
-  app_name: "YourBrand Chat"
-  enable_notifs: true
-  notif_for_new_users: true
+# email:                              # Disabled for POC — no SMTP configured
+#   smtp_host: "__SMTP_HOST__"
+#   smtp_port: 587
+#   smtp_user: "__SMTP_USER__"
+#   smtp_pass: "__SMTP_PASSWORD__"
+#   require_transport_security: true
+#   notif_from: "%(app)s <noreply@example.com>"
+#   app_name: "YourBrand Chat"
+#   enable_notifs: true
+#   notif_for_new_users: true
 
 # ──────────────────────────────────────────────
 # TURN (Phase 2 — uncomment when coturn is deployed)
