fix(03-01): add report_stats: false to homeserver.yaml
- Synapse generate mode requires report_stats to be explicitly set
- Missing key caused subprocess.CalledProcessError on docker compose run generate
- Added report_stats: false to suppress usage stats reporting for POC

[Rule 1 - Bug] Auto-fixed during Task 2 execution

--- a/synapse/homeserver.yaml
+++ b/synapse/homeserver.yaml
@@ -8,6 +8,7 @@ server_name: "__EC2_HOSTNAME__"
 public_baseurl: "http://__EC2_HOSTNAME__/"
 pid_file: /data/homeserver.pid
 web_client_location: "http://__EC2_HOSTNAME__/"
+report_stats: false
 
 listeners:
   - port: 8008
