fix(03-02): add _synapse/admin path to nginx proxy for registration token API
- Extend nginx location regex from /_matrix|/_synapse/client to
  /_matrix|/_synapse — includes /_synapse/admin required for
  POST /_synapse/admin/v1/registration_tokens/new
- Registration token JWkAZC1bx4BUozEh created (single-use, for Plan 03-03)
- VERIFY-04 satisfied: Element Web brand=YourBrand Chat, theme=custom

--- a/proxy/conf.d/element.conf
+++ b/proxy/conf.d/element.conf
@@ -6,8 +6,8 @@ server {
     listen [::]:80;
     server_name _;
 
-    # Matrix API — route to Synapse (no trailing slash on proxy_pass!)
-    location ~ ^(/_matrix|/_synapse/client) {
+    # Matrix API and Synapse admin API — route to Synapse (no trailing slash on proxy_pass!)
+    location ~ ^(/_matrix|/_synapse) {
         proxy_pass http://synapse:8008;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
